--- a/src/styles/components/authentication/profile/_migrations.scss
+++ b/src/styles/components/authentication/profile/_migrations.scss
@@ -3,9 +3,10 @@
     margin-top: 5rem !important;
   }
 
-  .usa-alert-static {
-    top: -44px;
-    left: 0px;
+  .usa-alert {
+    position: absolute;
+    bottom: -60px;
+    right: 40px;
   }
 
   .usa-alerts {
