--- a/src/styles/pages/_access.scss
+++ b/src/styles/pages/_access.scss
@@ -3,6 +3,10 @@
     white-space: nowrap;
   }
 
+  .background-white {
+    background-color: white;
+  }
+
   .show-permissions-button {
     margin-top: -8px !important;
     padding-left: 0;
