--- a/src/styles/all.scss
+++ b/src/styles/all.scss
@@ -53,6 +53,10 @@
 @import 'pages/help-roadmap';
 @import 'pages/users-directory';
 @import 'pages/ui-kit-demo';
+@import 'pages/access';
+@import 'pages/grant-access';
+@import 'pages/public-profile';
+@import 'pages/edit-domain';
 
 html, body{
   height: 100%;
