--- a/src/styles/all.scss
+++ b/src/styles/all.scss
@@ -19,6 +19,7 @@
 @import 'components/accordion';
 @import 'components/alert';
 @import 'components/authentication';
+@import 'components/collapsible';
 @import 'components/footer';
 @import 'components/button';
 @import 'components/pagination';
