--- a/src/app/authentication/profile/reset/reset.component.html
+++ b/src/app/authentication/profile/reset/reset.component.html
@@ -9,7 +9,7 @@
     <div #formControl>
       <sam-password [currentPassword]="passwordForm.controls.currentPassword"
                     [password]="passwordForm.controls.newPassword"
-                    [phrases]="[user.firstName, user.initials, user.lastName, user.email]"></sam-password>
+                    [phrases]="[user.firstName, user.initials, user.lastName, user.email, user.fullName]"></sam-password>
       <div class="usa-button-controls">
         <button type="submit">Submit</button>
       </div>
