--- a/src/styles/components/authentication/_register.scss
+++ b/src/styles/components/authentication/_register.scss
@@ -167,6 +167,14 @@
     float: right;
   }
 
+  .usa-alert-static {
+    width: 500px;
+    top: 40px;
+    left: 0px;
+    margin-top: 0px;
+    text-align: left;
+  }
+
   .ng-untouched {
     box-shadow: none;
   }
