--- a/src/styles/components/authentication/_forgot.scss
+++ b/src/styles/components/authentication/_forgot.scss
@@ -153,4 +153,35 @@
   .ng-untouched {
     box-shadow: none;
   }
+
+  .usa-alert-static {
+    top: 0px;
+    left: 110px;
+    margin-top: 0px;
+  }
+
+  .usa-forgot-init {
+    .usa-alert-static {
+      top: inherit;
+      bottom: 0px;
+      left: 50%;
+      margin-left: 40px;
+      margin-bottom: -4px;
+    }
+  }
+
+  .usa-forgot-main {
+    .usa-form-large {
+      width: 460px;
+      margin: 0 auto;
+    }
+
+    .usa-alert-static {
+      top: inherit;
+      bottom: 0px;
+      left: 50%;
+      margin-bottom: 40px;
+      margin-left: 40px;
+    }
+  }
 }
