SAM-7338 intila commit

--- a/src/app/assistance-listing/assistance-listing-operations/assistance-listing-operations.page.html
+++ b/src/app/assistance-listing/assistance-listing-operations/assistance-listing-operations.page.html
@@ -48,7 +48,7 @@
         <div>
           <div class="pull-left">
             <samButton buttonText="Cancel" (onClick)="onCancelClick($event)"></samButton>
-            <samButton [buttonType]="(!programForm.valid ? 'disabled' : 'default')" buttonText="Save" (click)="saveProgram($event)"></samButton>
+            <samButton [buttonType]="(!programForm.valid ? 'disabled' : 'default')" buttonText="Save" (onClick)="saveProgram($event)"></samButton>
           </div>
         </div>
 
