--- a/src/app/opportunity/opportunity.page.html
+++ b/src/app/opportunity/opportunity.page.html
@@ -96,7 +96,8 @@
       </section>
 
       <section [attr.id]="generateID(opportunityFields.General)" *ngIf="shouldBeDisplayed(opportunityFields.General)">
-        <h2>General Information</h2>
+        <h2>General Information</h2> <samButton *ngIf="differences.changesExist" [buttonId]="'defaultBtn'" [buttonText]="'Default'" [buttonType]="btnType" (click)="showChanges()"></samButton>
+        <span *ngIf="showChanges"> Changes from {{differences.postedDate}}</span>
         <ul class="usa-unstyled-list">
           <li [attr.id]="generateID(opportunityFields.Type, 'general')" *ngIf="shouldBeDisplayed(opportunityFields.Type)">
             <strong>Opportunity Type: </strong>
@@ -119,6 +120,7 @@
           <li [attr.id]="generateID(opportunityFields.ResponseDate, 'general')" *ngIf="shouldBeDisplayed(opportunityFields.ResponseDate)">
             <strong>Update/Amendment Response Date: </strong>
             {{ opportunity.data?.solicitation?.deadlines?.response | dateFormat: 'MMM DD, YYYY' }}
+            <span *ngIf="showChanges && differences.updateResponseDate"> Changes from {{differences.updateResponseDate}}</span>
           </li>
           <li [attr.id]="generateID(opportunityFields.OriginalResponseDate, 'general')" *ngIf="shouldBeDisplayed(opportunityFields.OriginalResponseDate)">
             <strong>Original Response Date: </strong>
@@ -131,10 +133,13 @@
             <ng-container *ngSwitchCase="'manual'">Manual Archive</ng-container>
             <ng-container *ngSwitchCase="'auto15'">Automatic, 15 days after response date</ng-container>
             <ng-container *ngSwitchCase="'autocustom'">Automatic, on specified date</ng-container>
+            <span *ngIf="showChanges && differences.archivingPolicy"> {{differences.archivingPolicy}}</span>
           </li>
           <li [attr.id]="generateID(opportunityFields.ArchiveDate, 'general')" *ngIf="shouldBeDisplayed(opportunityFields.ArchiveDate)">
             <strong>Update/Amendment Archive Date: </strong>
             {{ opportunity.data?.archive?.date | dateFormat: 'MMM DD, YYYY' }}
+            <span *ngIf="showChanges && differences.updateArchiveDate"> {{differences.updateArchiveDate}}</span>
+
           </li>
           <li [attr.id]="generateID(opportunityFields.OriginalArchiveDate, 'general')" *ngIf="shouldBeDisplayed(opportunityFields.OriginalArchiveDate)">
             <strong>Original Archive Date: </strong>
@@ -160,6 +165,7 @@
             <ng-container *ngIf="opportunity?.data?.isRecoveryRelated == true">
               Recovery and Reinvestment Act
             </ng-container>
+            <span *ngIf="showChanges && differences.specialLegislation"> {{differences.specialLegislation}}</span>
           </li>
         </ul>
       </section>
@@ -186,6 +192,7 @@
               <ng-container *ngFor = "let element of [opportunity.data?.solicitation?.setAside] | filterMultiArrayObject:dictionary.set_aside_type:'element_id':false:''">
                 <ng-container> {{ element.value }}</ng-container>
               </ng-container>
+              <span *ngIf="showChanges && differences.updateSetAside"> {{differences.updateSetAside}}</span>
             </ng-container>
           </li>
           <li [attr.id]="generateID(opportunityFields.ClassificationCode, 'classification')" *ngIf="shouldBeDisplayed(opportunityFields.ClassificationCode)">
@@ -195,6 +202,7 @@
                 {{ element.value }}
               </ng-container>
             </ng-container>
+            <span *ngIf="showChanges && differences.classificationCode"> {{differences.classificationCode}}</span>
           </li>
           <li [attr.id]="generateID(opportunityFields.NAICSCode, 'classification')" *ngIf="shouldBeDisplayed(opportunityFields.NAICSCode)">
             <strong>NAICS Code(s): </strong>
@@ -205,6 +213,7 @@
                 </li>
               </ul>
             </ng-container>
+            <span *ngIf="showChanges && differences.naicsCode"> {{differences.naicsCode}}</span>
           </li>
           <li [attr.id]="generateID(opportunityFields.POP, 'classification')" *ngIf="shouldBeDisplayed(opportunityFields.POP)">
             <strong >Place of Performance: </strong>
@@ -229,6 +238,7 @@
               {{opportunity.data?.placeOfPerformance?.country}}
             </div>
           </li>
+          <span *ngIf="showChanges && differences.placeOfPerformance"> {{differences.placeOfPerformance}}</span>
         </ul>
       </section>
 
@@ -240,6 +250,7 @@
         </h3>
         <div [innerHTML]="opportunity.data?.descriptions[0].content | fixhtml"></div>
       </section>
+      <span *ngIf="showChanges && differences.description"> {{differences.description}}</span>
 
       <!-- Packages -->
       <section [attr.id]="generateID(opportunityFields.Packages)" *ngIf="shouldBeDisplayed(opportunityFields.Packages)">
@@ -370,6 +381,7 @@
               {{opportunityLocation?.zip}}
             </span>
           </div>
+          <span *ngIf="showChanges && differences.contractingOfficeAddress"> {{differences.contractingOfficeAddress}}</span>
         </div>
         <div class="usa-grid-full">
           <div class="usa-width-one-half" [attr.id]="generateID(opportunityFields.POC, 'contact-primary')" *ngIf="shouldBeDisplayed(opportunityFields.POC)">
@@ -403,6 +415,7 @@
               </li>
             </ul>
           </div>
+          <span *ngIf="showChanges && differences.primaryPointOfContact"> {{differences.primaryPointOfContact}}</span>
           <div class="usa-width-one-half" [attr.id]="generateID(opportunityFields.POC, 'contact-secondary')" *ngIf="shouldBeDisplayed(opportunityFields.POC)">
             <h3>Secondary Point of Contact</h3>
             <ul class="usa-unstyled-list">
@@ -434,6 +447,7 @@
               </li>
             </ul>
           </div>
+          <span *ngIf="showChanges && differences.secondaryPointOfContact"> {{differences.secondaryPointOfContact}}</span>
         </div>
       </section>
 
@@ -484,18 +498,18 @@
             <samSelect class="sort-select" [(model)]="awardSort" [options]="awardSortOptions" [name]='awardSort' (modelChange)="reloadRelatedOpportunities()"></samSelect>
           </div>
         </div>
-        
+
         <p class="m_T-2x" style="text-align: right;" *ngIf="relatedOpportunitiesMetadata">
-          <span class="usa-sr-only">Showing results</span> 
+          <span class="usa-sr-only">Showing results</span>
           <strong>
-            {{min +1}} 
+            {{min +1}}
             <span class="usa-sr-only">through</span> -
             {{(relatedOpportunitiesMetadata.count < max) ? relatedOpportunitiesMetadata.count : max}}
           </strong>
-          of 
+          of
           <strong>{{relatedOpportunitiesMetadata.count}}</strong>
         </p>
-        
+
 
         <div id="awards-list" tabindex="-1">
           <div class="card-simple" *ngFor="let element of relatedOpportunities" tabindex="0">
