re-adding these from other feature branch

--- a/src/styles/all.scss
+++ b/src/styles/all.scss
@@ -43,6 +43,7 @@
 @import 'components/toggle-switch';
 @import 'components/feedback-form';
 @import 'components/well';
+@import 'components/autocomplete';
 
 @import 'pages/awards';
 @import 'pages/entity-object-view';
